<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:title="Мои контакты"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/numberMailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/number"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/messageMailEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/message"
        android:textSize="22sp"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/sendBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/send"
        android:textSize="24sp"/>

</LinearLayout>